fix: disable rounded input form on iphones

--- a/src/blocks/navigation/__form-field/navigation__form-field.css
+++ b/src/blocks/navigation/__form-field/navigation__form-field.css
@@ -12,4 +12,5 @@
   color: #64748b;
   text-overflow: ellipsis;
   -o-text-overflow: ellipsis;
+  -webkit-appearance: none;
 }
